samples/_failures_safe/1761090318_464111_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96bc00dd.c: In function ‘main’:
./samples/SAFE/__tmp_96bc00dd.c:144:44: error: expected ‘)’ at end of input
  144 |                 if (temp2_idx > 0 && strcmp
      |                    ~                       ^
      |                                            )
./samples/SAFE/__tmp_96bc00dd.c:144:17: error: expected declaration or statement at end of input
  144 |                 if (temp2_idx > 0 && strcmp
      |                 ^~
./samples/SAFE/__tmp_96bc00dd.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96bc00dd.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96bc00dd.c:144:17: error: expected declaration or statement at end of input
